--- a/admin/index.html
+++ b/admin/index.html
@@ -1,8 +1,17 @@
 <!doctype html>
 <html>
   <head>
-    <title>test manager</title>
-    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+    <meta charset="utf-8" />
+    <title>Content Manager</title>
   </head>
-  <body></body>
+  <body>
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+  </body>
 </html>
+<script>
+  // Initialize Netlify CMS
+  if (window.NetlifyCmsApp) {
+    window.NetlifyCmsApp.init();
+  } else {
+    console.error("Netlify CMS failed to initialize.");
+  }
