--- a/admin/index.html
+++ b/admin/index.html
@@ -2,16 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Content Manager</title>
+    <title>Netlify CMS</title>
   </head>
   <body>
+    <!-- CMS, buraya mount edilir -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </body>
 </html>
-<script>
-  // Initialize Netlify CMS
-  if (window.NetlifyCmsApp) {
-    window.NetlifyCmsApp.init();
-  } else {
-    console.error("Netlify CMS failed to initialize.");
-  }
