--- a/admin/index.html
+++ b/admin/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Netlify CMS</title>
+    <title>abuzer CMS</title>
   </head>
   <body>
     <!-- CMS, buraya mount edilir -->
